--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "C_Cpp.default.configurationProvider": "particle.particle-vscode-core",
     "particle.targetDevice": "Umstead-Enviro",
-    "particle.firmwareVersion": "1.1.0",
+    "particle.firmwareVersion": "1.4.2",
     "particle.targetPlatform": "electron",
-    "cortex-debug.openocdPath": "/Users/chipmc/.particle/toolchains/openocd/0.10.0-particle.1/bin/openocd"
+    "cortex-debug.openocdPath": "${command:particle.getDebuggerOpenocdPath}"
 }
